--- a/coming-soon.html
+++ b/coming-soon.html
@@ -15,9 +15,13 @@
     </head>
     <body>
         <div class="container">
-            <header>
-                <div class="header-logo">
-                    <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            <a href="../index.html">
+                <header>
+                    <div class="loader-box">                        
+                        <div id="loader"></div> 
+                    </div>                    
+                    <div class="header-logo">
+                        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood"></div>
                     <div class="p0">
                         <div class="p1">
                             <p>Coming Soon</p>
@@ -32,16 +36,16 @@
                             <p>En Construction</p>
                         </div>
                     </div>
-                </div>
-            </header>
-            <main class="main-flex">
-                <div class="wallpaper">
-                    <img src="./assets/images/coming-soon.png" alt="">
-                </div> 
-                <div class="button-back">
-                    <a href="./index.html">Retour à l'accueil</a>
-                </div>
-            </main>
+                </header>
+                <main class="main-flex">
+                    <div class="wallpaper">
+                        <img src="./assets/images/coming-soon.png" alt="">
+                    </div> 
+                    <div class="button-back">
+                        <a href="./index.html">Retour à l'accueil</a>
+                    </div>
+                </main>
+            </a>
             <footer>
                 <div class="footer">
                     <h3>ohmyfood</h3>
