--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/styles-desktop.css">
         <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico">
         <title>ohmyfood</title>
     </head>
@@ -26,7 +27,7 @@
                 </div>
                 <div class="explorer">
                     <div class="explorer-text">
-                        <h1>Réservez le menu qui<br>vous convient</h1>
+                        <h1>Réservez le menu qui vous convient</h1>
                         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                     </div>
                     <div class="explorer-link">
@@ -66,8 +67,8 @@
                     <h2>Restaurants</h2>
                     <div class="restaurants">
                         <section class="restaurants-new">
-                            <a href="./restaurants/menu-la-palette-du-gout.html">
-                                <article class="card-restaurant">
+                            <article class="card-restaurant">
+                                <a href="./restaurants/menu-la-palette-du-gout.html">
                                     <div class="img-restaurant">
                                         <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">                                  
                                         <div class="new1">
@@ -77,14 +78,14 @@
                                     <div class="card-restaurant-title">
                                         <h3>La palette du goût</h3>
                                         <p>Ménilmontant</p>
-                                        <div class="heart-position">
-                                            <button class="heart"></button>
-                                        </div>
                                     </div>
-                                </article>
-                            </a>
-                            <a href="./restaurants/menu-la-note-enchantee.html">
-                                <article class="card-restaurant">
+                                </a>
+                                <div class="heart-position">
+                                    <button class="heart"></button>
+                                </div>
+                            </article>
+                            <article class="card-restaurant">                            
+                                <a href="./restaurants/menu-la-note-enchantee.html">
                                     <div class="img-restaurant">
                                         <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
                                         <div class="new2">
@@ -94,53 +95,57 @@
                                     <div class="card-restaurant-title">
                                         <h3>La note enchantée</h3>
                                         <p>Charonne</p>
-                                        <div class="heart-position">
-                                            <button class="heart"></button>
-                                        </div>
-                                    </div>                                
-                                </article>
-                            </a>
+                                    </div>
+                                </a>
+                                <div class="heart-position">
+                                    <button class="heart"></button>
+                                </div>                                
+                            </article>
                         </section>
                         <section class="restaurants-panel">
-                            <a href="./restaurants/menu-a-la-francaise.html">
-                                <article class="card-restaurant">
+                            <article class="card-restaurant">
+                                <a href="./restaurants/menu-a-la-francaise.html">
                                     <div class="img-restaurant">
                                         <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
                                     </div>
                                     <div class="card-restaurant-title">
                                         <h3>À la française</h3>
                                         <p>Cité Rouge</p>
-                                        <div class="heart-position">
-                                            <button class="heart"></button>
-                                        </div>
                                     </div>
-                                </article>
-                            </a>
-                            <a href="./restaurants/menu-le-delice-des-sens.html">
-                                <article class="card-restaurant">
+                                </a>
+                                <div class="heart-position">
+                                    <button class="heart"></button>
+                                </div>
+                            </article>
+                            <article class="card-restaurant">
+                                <a href="./restaurants/menu-le-delice-des-sens.html">
                                     <div class="img-restaurant">
                                         <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
                                     </div>
                                     <div class="card-restaurant-title">
                                         <h3>Le délice des sens</h3>
                                         <p>Folie-Méricourt</p>
-                                        <div class="heart-position">
-                                            <button class="heart"></button>
-                                        </div>
                                     </div>
-                                </article>
-                            </a>
+                                </a>
+                                <div class="heart-position">
+                                    <button class="heart"></button>
+                                </div>
+                            </article>
                         </section>
                     </div>
                 </div>
             </main>
             <footer>
                 <div class="footer">
-                    <h3>ohmyfood</h3>
-                    <a href="./coming-soon.html">Proposer un restaurant</a>
-                    <a href="./coming-soon.html">Devenir partenaire</a>
-                    <a href="./coming-soon.html">Mention légales</a>
-                    <a href="mailto:contact@ohmyfood.com">Contact</a>
+                    <div class="footer-logo">
+                        <h3>ohmyfood</h3>
+                    </div>
+                    <div class="footer-links">
+                        <a href="./coming-soon.html">Proposer un restaurant</a>
+                        <a href="./coming-soon.html">Devenir partenaire</a>
+                        <a href="./coming-soon.html">Mention légales</a>
+                        <a href="mailto:contact@ohmyfood.com">Contact</a> 
+                    </div>
                 </div>
             </footer>
         </div>
