--- a/restaurants/menu-a-la-francaise.html
+++ b/restaurants/menu-a-la-francaise.html
@@ -17,96 +17,123 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <div>
-                        <a href="../index.html">#</a>
-                    </div>
-                    <div>
-                        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div class="link-home-possition">
+                        <a href="../index.html">
+                            <div class="link-home"></div>
+                        </a>
                     </div>
                 </div>
             </header>
             <main>
-                <div class="wallpaper">
-                    <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">                    
-                </div>
-                <div class="menu">
-                    <h1>À la française</h1>
-                    <p>ENTRÉES</p>
-                    <div class="card-menu">
-                        <h2>Tartare de poulpe acidulé</h2>
-                        <div>
-                            <p>Aux zestes d'orange</p>
-                            <p>25€</p>
-                        </div>
+                <div class="container-main">
+                    <div class="wallpaper">
+                        <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
                     </div>
-                    <div class="card-menu">
-                        <h2>Velouté de légumes d'antan</h2>
-                        <div>
-                            <p>Carotte, panais, topinambour</p>
-                            <p>35€</p>
+                    <div class="menu">
+                        <div class="restaurant-name">
+                            <h1>À la française</h1>
+                            <div class="heart-position">
+                                <button class="heart"></button>
+                            </div>
                         </div>
+                        <section class="meal">
+                            <div class="meal-starters">
+                                <div class="meal-title">
+                                    <p>ENTRÉES</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Tartare de poulpe acidulé</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Aux zestes d'orange</p>
+                                        <p>25€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Velouté de légumes d'antan</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Carotte, panais, topinambour</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Soupe à l'oignon</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Revisitée</p>
+                                        <p>20€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="meal-dishes">
+                                <div class="meal-title">
+                                    <p>PLATS</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Coquilles Saint-Jacques</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Accompagnées d'une purée de panais</p>
+                                        <p>40€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Magret de canard</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et parmentier de pommes de terre</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Sur son lit de gnocchis aux légumes</p>
+                                        <p>44€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="meal-desserts">
+                                <div class="meal-title">
+                                    <p>DESSERTS</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Pétales de violettes glacés</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et purée de noisettes</p>
+                                        <p>18€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Fondant au chocolat</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et glace à la vanille de Madagascar</p>
+                                        <p>22€</p>
+                                    </div>
+                                 </article>
+                                 <article class="card-menu">
+                                    <h2>Millefeuille croustillant</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Myrtilles et pâte d’amande</p>
+                                        <p>23€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="button-command-flex">
+                                <button type="submit" class="button-command">Commander</button>
+                            </div>
+                        </section>
                     </div>
-                    <div class="card-menu">
-                        <h2>Soupe à l'oignon</h2>
-                        <div>
-                            <p>Revisitée</p>
-                            <p>20€</p>
-                        </div>
-                    </div>
-                    <p>PLATS</p>
-                    <div class="card-menu">
-                        <h2>Coquilles Saint-Jacques</h2>
-                        <div>
-                            <p>Accompagnées d'une purée de panais</p>
-                            <p>40€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Magret de canard</h2>
-                        <div>
-                            <p>Et parmentier de pommes de terre</p>
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-                        <div>
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                            <p>44€</p>
-                        </div>
-                    </div>
-                    <p>DESSERTS</p>
-                    <div class="card-menu">
-                        <h2>Pétales de violettes glacés</h2>
-                        <div>
-                            <p>Et purée de noisettes</p>
-                            <p>18€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Fondant au chocolat</h2>
-                        <div>
-                            <p>Revisité</p>
-                            <p>22€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Millefeuille croustillant</h2>
-                        <div>
-                            <p>Myrtilles et pâte d’amande</p>
-                            <p>23€</p>
-                        </div>
-                    </div>
-                    <button type="submit" class="button-command">Commander</button>
                 </div>
             </main>
             <footer>
                 <div class="footer">
-                    <h3>ohmyfood</h3>
-                    <a href="../coming-soon.html">Proposer un restaurant</a>
-                    <a href="../coming-soon.html">Devenir partenaire</a>
-                    <a href="../coming-soon.html">Mention légales</a>
-                    <a href="mailto:contact@ohmyfood.com">Contact</a>
+                    <div class="footer-logo">
+                        <h3>ohmyfood</h3>
+                    </div>
+                    <div class="footer-links">
+                        <a href="../coming-soon.html">Proposer un restaurant</a>
+                        <a href="../coming-soon.html">Devenir partenaire</a>
+                        <a href="../coming-soon.html">Mention légales</a>
+                        <a href="mailto:contact@ohmyfood.com">Contact</a> 
+                    </div>
                 </div>
             </footer>
         </div>
