--- a/restaurants/menu-la-note-enchantee.html
+++ b/restaurants/menu-la-note-enchantee.html
@@ -15,105 +15,131 @@
     </head>
     <body>
         <div class="container">
-            <header>
-                <div class="header-logo">
-                    <div>
-                        <a href="../index.html">#</a>
-                    </div>
-                    <div>
-                        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-                    </div>
+            <div class="header-logo">
+                <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                <div class="link-home-possition">
+                    <a href="../index.html">
+                        <div class="link-home"></div>
+                    </a>
                 </div>
+            </div>
             </header>
             <main>
-                <div class="wallpaper">
-                    <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">                    
-                </div>
-                <div class="menu">
-                    <h1>La note enchantée</h1>
-                    <p>ENTRÉES</p>
-                    <div class="card-menu">
-                        <h2>Ravioles de foie gras</h2>
-                        <div>
-                            <p>Accompagnées de leur crème à la truffe</p>
-                            <p>25€</p>
-                        </div>
+                <div class="container-main">
+                    <div class="wallpaper">
+                        <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
                     </div>
-                    <div class="card-menu">
-                        <h2>Caviar osciètre</h2>
-                        <div>
-                            <p>Sur blini à la farine de blé noir</p>
-                            <p>35€</p>
+                    <div class="menu">
+                        <div class="restaurant-name">
+                            <h1>La note enchantée</h1>
+                            <div class="heart-position">
+                                <button class="heart"></button>
+                            </div>
                         </div>
+                        <section class="meal">
+                            <div class="meal-starters">
+                                <div class="meal-title">
+                                    <p>ENTRÉES</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Ravioles de foie gras</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Accompagnées de leur crème à la truffe</p>
+                                        <p>25€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Caviar osciètre</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Sur blini à la farine de blé noir</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Homard et espuma de potiron</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Marinés aux zestes d'orange</p>
+                                        <p>20€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Foie gras de canard cuit entier</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Confiture de figue et pain toasté</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="meal-dishes">
+                                <div class="meal-title">
+                                    <p>PLATS</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Noix de coquilles Saint-Jacques</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Sur lit de purée de céleri-rave</p>
+                                        <p>40€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Langoustine poêlée</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Purée de patate douce</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Mijoté de queue de bœuf</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et riz sauvage aux zestes de citron</p>
+                                        <p>45€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="meal-desserts">
+                                <div class="meal-title">
+                                    <p>DESSERTS</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Macaron noisette et chocolat</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Glace au caramel brun et sel de Guérande</p>
+                                        <p>18€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Baba au rhum revisité</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Avec son coulis de citron</p>
+                                        <p>22€</p>
+                                    </div>
+                                 </article>
+                                 <article class="card-menu">
+                                    <h2>Tarte au citron meringuée</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Déstructurée</p>
+                                        <p>23€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="button-command-flex">
+                                <button type="submit" class="button-command">Commander</button>
+                            </div>
+                        </section>                    
                     </div>
-                    <div class="card-menu">
-                        <h2>Homard et espuma de potiron</h2>
-                        <div>
-                            <p>Marinés aux zestes d'orange</p>
-                            <p>20€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Foie gras de canard cuit entier</h2>
-                        <div>
-                            <p>Confiture de figue et pain toasté</p>
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <p>PLATS</p>
-                    <div class="card-menu">
-                        <h2>Noix de coquilles Saint-Jacques</h2>
-                        <div>
-                            <p>Sur lit de purée de céleri-rave</p>
-                            <p>40€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Langoustine poêlée</h2>
-                        <div>
-                            <p>Purée de patate douce</p>
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Mijoté de queue de bœuf</h2>
-                        <div>
-                            <p>Et riz sauvage aux zestes de citron</p>
-                            <p>44€</p>
-                        </div>
-                    </div>
-                    <p>DESSERTS</p>
-                    <div class="card-menu">
-                        <h2>Macaron noisette et chocolat</h2>
-                        <div>
-                            <p>Glace au caramel brun et sel de Guérande</p>
-                            <p>18€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Baba au rhum revisité</h2>
-                        <div>
-                            <p>Avec son coulis de citron</p>
-                            <p>22€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Tarte au citron meringuée</h2>
-                        <div>
-                            <p>Déstructurée</p>
-                            <p>23€</p>
-                        </div>
-                    </div>
-                    <button type="submit" class="button-command">Commander</button>
                 </div>
             </main>
             <footer>
                 <div class="footer">
-                    <h3>ohmyfood</h3>
-                    <a href="../coming-soon.html">Proposer un restaurant</a>
-                    <a href="../coming-soon.html">Devenir partenaire</a>
-                    <a href="../coming-soon.html">Mention légales</a>
-                    <a href="mailto:contact@ohmyfood.com">Contact</a>
+                    <div class="footer-logo">
+                        <h3>ohmyfood</h3>
+                    </div>
+                    <div class="footer-links">
+                        <a href="../coming-soon.html">Proposer un restaurant</a>
+                        <a href="../coming-soon.html">Devenir partenaire</a>
+                        <a href="../coming-soon.html">Mention légales</a>
+                        <a href="mailto:contact@ohmyfood.com">Contact</a> 
+                    </div>
                 </div>
             </footer>
         </div>
