--- a/restaurants/menu-la-palette-du-gout.html
+++ b/restaurants/menu-la-palette-du-gout.html
@@ -17,102 +17,122 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <div>
-                        <a href="../index.html">#</a>
-                    </div>
-                    <div>
-                        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div class="link-home-possition">
+                        <a href="../index.html">
+                            <div class="link-home"></div>
+                        </a>
                     </div>
                 </div>
             </header>
             <main>
-                <div class="wallpaper">
-                    <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
-                    <div class="menu-position">
-                        <div class="menu">
+                <div class="container-main">
+                    <div class="wallpaper">
+                        <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
+                    </div>
+                    <div class="menu">
+                        <div class="restaurant-name">
                             <h1>La palette du goût</h1>
-                            <h2>ENTRÉES</h2>
-                            <div class="card-menu">
-                                <h2>Fricassée d'escargots</h2>
-                                <div class="card-menu-sub2">
-                                    <p>Au piment d'Espelette</p>
-                                    <p>25€</p>
-                                </div>
+                            <div class="heart-position">
+                                <button class="heart"></button>
                             </div>
-                            <div class="card-menu">
-                                <h2>Foie gras de canard mi-cuit</h2>
-                                <div class="card-menu-sub2">
-                                    <p>Et ses copeaux de truffe noire</p>
-                                    <p>35€</p>
+                        </div>
+                        <section class="meal">
+                            <div class="meal-starters">
+                                <div class="meal-title">
+                                    <p>ENTRÉES</p>
                                 </div>
+                                <article class="card-menu">
+                                    <h2>Fricassée d'escargots</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Au piment d'Espelette</p>
+                                        <p>25€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Foie gras de canard mi-cuit</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et ses copeaux de truffe noire</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Œuf au plat</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                                        <p>20€</p>
+                                    </div>
+                                </article>
                             </div>
-                            <div class="card-menu">
-                                <h2>Œuf au plat</h2>
-                                <div class="card-menu-sub2">
-                                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                                    <p>20€</p>
+                            <div class="meal-dishes">
+                                <div class="meal-title">
+                                    <p>PLATS</p>
                                 </div>
+                                <article class="card-menu">
+                                    <h2>Filet de bœuf aux herbes</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Accompagné de sa ribambelle de légumes</p>
+                                        <p>40€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Parmentier de queue de bœuf</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>À la truffe noire sur sa purée de panais</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Filet de turbot</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Aux agrumes</p>
+                                        <p>44€</p>
+                                    </div>
+                                </article>
                             </div>
-                            <p>PLATS</p>
-                            <div class="card-menu">
-                                <h2>Filet de bœuf aux herbes</h2>
-                                <div class="card-menu-sub2">
-                                    <p>Accompagné de sa ribambelle de légumes</p>
-                                    <p>40€</p>
+                            <div class="meal-desserts">
+                                <div class="meal-title">
+                                    <p>DESSERTS</p>
                                 </div>
-                            </div>
-                            <div class="card-menu">
-                                <h2>Parmentier de queue de bœuf</h2>
-                                <div class="card-menu-sub2">
-                                    <p>À la truffe noire sur sa purée de panais</p>
-                                    <p>35€</p>
-                                </div>
-                            </div>
-                            <div class="card-menu">
-                                <h2>Filet de turbot</h2>
-                                <div class="card-menu-sub2">
-                                    <p>Aux agrumes</p>
-                                    <p>44€</p>
-                                </div>
-                            </div>
-                            <p>DESSERTS</p>
-                            <div class="card-menu">
-                                <h2>Paris-Brest</h2>
-                                <div class="card-menu-sub2">
-                                    <p>Revisité</p>
-                                    <p>18€</p>
-                                </div>
-                            </div>
-                            <div class="card-menu">
-                                <h2>Macaron au chocolat d'exception</h2>
-                                <div class="card-menu-sub2">
-                                    <p>Et glace à la vanille de Madagascar</p>
-                                    <p>22€</p>
-                                </div>
-                            </div>
-                            <div class="card-menu">
-                                <h2>Mousse au chocolat</h2>
-                                <div class="card-menu-sub2">
-                                    <p>Au piment d'Espelette et à la truffe noire</p>
-                                    <p>23€</p>
-                                </div>
+                                <article class="card-menu">
+                                    <h2>Paris-Brest</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Revisité</p>
+                                        <p>18€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Macaron au chocolat d'exception</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et glace à la vanille de Madagascar</p>
+                                        <p>22€</p>
+                                    </div>
+                                 </article>
+                                 <article class="card-menu">
+                                    <h2>Mousse au chocolat</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Au piment d'Espelette et à la truffe noire</p>
+                                        <p>23€</p>
+                                    </div>
+                                </article>
                             </div>
                             <div class="button-command-flex">
                                 <button type="submit" class="button-command">Commander</button>
-                            </div>                    
-                        </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
-
             </main>
             <footer>
-                <div class="footer-position">
-                    <div class="footer">
+                <div class="footer">
+                    <div class="footer-logo">
                         <h3>ohmyfood</h3>
+                    </div>
+                    <div class="footer-links">
                         <a href="../coming-soon.html">Proposer un restaurant</a>
                         <a href="../coming-soon.html">Devenir partenaire</a>
                         <a href="../coming-soon.html">Mention légales</a>
-                        <a href="mailto:contact@ohmyfood.com">Contact</a>
+                        <a href="mailto:contact@ohmyfood.com">Contact</a> 
                     </div>
                 </div>
             </footer>
