--- a/restaurants/menu-le-delice-des-sens.html
+++ b/restaurants/menu-le-delice-des-sens.html
@@ -17,96 +17,123 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <div>
-                        <a href="../index.html">#</a>
-                    </div>
-                    <div>
-                        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div class="link-home-possition">
+                        <a href="../index.html">
+                            <div class="link-home"></div>
+                        </a>
                     </div>
                 </div>
             </header>
             <main>
-                <div class="wallpaper">
-                    <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">                    
-                </div>
-                <div class="menu">
-                    <h1>Le délice des sens</h1>
-                    <p>ENTRÉES</p>
-                    <div class="card-menu">
-                        <h2>Tartare de thon</h2>
-                        <div>
-                            <p>Assaisonné au yuzu</p>
-                            <p>25€</p>
-                        </div>
+                <div class="container-main">
+                    <div class="wallpaper">
+                        <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
                     </div>
-                    <div class="card-menu">
-                        <h2>Bouchée de homard croustillant</h2>
-                        <div>
-                            <p>Et sa farandole de petits légumes</p>
-                            <p>35€</p>
+                    <div class="menu">
+                        <div class="restaurant-name">
+                            <h1>Le délice des sens</h1>
+                            <div class="heart-position">
+                                <button class="heart"></button>
+                            </div>
                         </div>
+                        <section class="meal">
+                            <div class="meal-starters">
+                                <div class="meal-title">
+                                    <p>ENTRÉES</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Tartare de thon</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Assaisonné au yuzu</p>
+                                        <p>25€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Bouchée de homard croustillant</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et sa farandole de petits légumes</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Velouté de cèpes</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Aux truffes</p>
+                                        <p>20€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="meal-dishes">
+                                <div class="meal-title">
+                                    <p>PLATS</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Poulet rôti aux herbes de Provence</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et sa crème de truffe</p>
+                                        <p>40€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Langouste rôtie</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et ses légumes de saison</p>
+                                        <p>35€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Côte de bœuf Angus</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Et sa purée de panais</p>
+                                        <p>44€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="meal-desserts">
+                                <div class="meal-title">
+                                    <p>DESSERTS</p>
+                                </div>
+                                <article class="card-menu">
+                                    <h2>Farandole de desserts</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Du chef</p>
+                                        <p>18€</p>
+                                    </div>
+                                </article>
+                                <article class="card-menu">
+                                    <h2>Crème brulée</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>Revisitée</p>
+                                        <p>22€</p>
+                                    </div>
+                                 </article>
+                                 <article class="card-menu">
+                                    <h2>Tiramisu</h2>
+                                    <div class="card-menu-sub2">
+                                        <p>À la noisette</p>
+                                        <p>23€</p>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="button-command-flex">
+                                <button type="submit" class="button-command">Commander</button>
+                            </div>
+                        </section>
                     </div>
-                    <div class="card-menu">
-                        <h2>Velouté de cèpes</h2>
-                        <div>
-                            <p>Aux truffes</p>
-                            <p>20€</p>
-                        </div>
-                    </div>
-                    <p>PLATS</p>
-                    <div class="card-menu">
-                        <h2>Poulet rôti aux herbes de Provence</h2>
-                        <div>
-                            <p>Et sa crème de truffe</p>
-                            <p>40€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Langouste rôtie</h2>
-                        <div>
-                            <p>Et ses légumes de saison</p>
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Côte de bœuf Angus</h2>
-                        <div>
-                            <p>Et sa purée de panais</p>
-                            <p>44€</p>
-                        </div>
-                    </div>
-                    <p>DESSERTS</p>
-                    <div class="card-menu">
-                        <h2>Farandole de desserts</h2>
-                        <div>
-                            <p>Du chef</p>
-                            <p>18€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Crème brulée</h2>
-                        <div>
-                            <p>Revisitée</p>
-                            <p>22€</p>
-                        </div>
-                    </div>
-                    <div class="card-menu">
-                        <h2>Tiramisu</h2>
-                        <div>
-                            <p>À la noisette</p>
-                            <p>23€</p>
-                        </div>
-                    </div>
-                    <button type="submit" class="button-command">Commander</button>
                 </div>
             </main>
             <footer>
                 <div class="footer">
-                    <h3>ohmyfood</h3>
-                    <a href="../coming-soon.html">Proposer un restaurant</a>
-                    <a href="../coming-soon.html">Devenir partenaire</a>
-                    <a href="../coming-soon.html">Mention légales</a>
-                    <a href="mailto:contact@ohmyfood.com">Contact</a>
+                    <div class="footer-logo">
+                        <h3>ohmyfood</h3>
+                    </div>
+                    <div class="footer-links">
+                        <a href="../coming-soon.html">Proposer un restaurant</a>
+                        <a href="../coming-soon.html">Devenir partenaire</a>
+                        <a href="../coming-soon.html">Mention légales</a>
+                        <a href="mailto:contact@ohmyfood.com">Contact</a> 
+                    </div>
                 </div>
             </footer>
         </div>
