media querie view

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/styles-tablette.css">
         <link rel="stylesheet" href="./css/styles-desktop.css">
+        <link rel="stylesheet" href="./css/styles-desktop-large.css">
         <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico">
         <title>ohmyfood</title>
     </head>
@@ -36,29 +38,23 @@
                 </div>
                 <div class="notice">
                     <h2>Fontionnement</h2>
-                    <div class="step">
-                        <div class="step-a">
-                            <div class="step-a1">
-                                <p>Choisissez un restaurant</p>
-                                <div class="step-a2">
-                                    <p>1</p>
-                                </div>
-                            </div>                            
+                    <div class="steps">
+                        <div class="step-content">
+                            <p>Choisissez un restaurant</p>
+                            <div class="step-number">
+                                <p>1</p>
+                            </div>
                         </div>
-                        <div class="step-b">
-                            <div class="step-b1">
-                                <p>Composez votre menu</p>
-                                <div class="step-b2">
-                                    <p>2</p>
-                                </div>
-                            </div>                            
+                        <div class="step-content">
+                            <p>Composez votre menu</p>
+                            <div class="step-number">
+                                <p>2</p>
+                            </div>
                         </div>
-                        <div class="step-c">
-                            <div class="step-c1">
-                                <p>Dégustez au restaurant</p>
-                                <div class="step-c2">
-                                    <p>3</p>
-                                </div>
+                        <div class="step-content">
+                            <p>Dégustez au restaurant</p>
+                            <div class="step-number">
+                                <p>3</p>
                             </div>
                         </div>
                     </div>                    
@@ -141,8 +137,14 @@
                         <h3>ohmyfood</h3>
                     </div>
                     <div class="footer-links">
-                        <a href="./coming-soon.html">Proposer un restaurant</a>
-                        <a href="./coming-soon.html">Devenir partenaire</a>
+                        <div class="footer-link-logo">
+                            <div class="footer-link-logo-submit"></div>
+                            <a class="footer-link-submit" href="./coming-soon.html">Proposer un restaurant</a>
+                        </div>
+                        <div class="footer-link-logo">
+                            <div class="footer-link-logo-partner"></div>
+                            <a class="footer-link-partner" href="./coming-soon.html">Devenir partenaire</a>
+                        </div>
                         <a href="./coming-soon.html">Mention légales</a>
                         <a href="mailto:contact@ohmyfood.com">Contact</a> 
                     </div>
