--- a/restaurants/menu-le-delice-des-sens.html
+++ b/restaurants/menu-le-delice-des-sens.html
@@ -129,9 +129,15 @@
                         <h3>ohmyfood</h3>
                     </div>
                     <div class="footer-links">
-                        <a href="../coming-soon.html">Proposer un restaurant</a>
-                        <a href="../coming-soon.html">Devenir partenaire</a>
-                        <a href="../coming-soon.html">Mention légales</a>
+                        <div class="footer-link-logo">
+                            <div class="footer-link-logo-submit"></div>
+                            <a class="footer-link-submit" href="../coming-soon.html">Proposer un restaurant</a>
+                        </div>
+                        <div class="footer-link-logo">
+                            <div class="footer-link-logo-partner"></div>
+                            <a class="footer-link-partner" href="../coming-soon.html">Devenir partenaire</a>
+                        </div>
+                        <a href="./coming-soon.html">Mention légales</a>
                         <a href="mailto:contact@ohmyfood.com">Contact</a> 
                     </div>
                 </div>
