Media querie veiw OK

--- a/restaurants/menu-la-palette-du-gout.html
+++ b/restaurants/menu-la-palette-du-gout.html
@@ -10,6 +10,9 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <link rel="stylesheet" href="../css/view.css">
+	    <link rel="stylesheet" href="../css/view-tablette.css">
+	    <link rel="stylesheet" href="../css/view-desktop.css">
+	    <link rel="stylesheet" href="../css/view-desktop-large.css">
         <link rel="icon" type="image/x-icon" href="../assets/images/logo/favicon.ico">
         <title>Menu - La palette du goût</title>
     </head>
@@ -31,8 +34,10 @@
                         <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
                     </div>
                     <div class="menu">
-                        <div class="restaurant-name">
-                            <h1>La palette du goût</h1>
+                        <div class="restaurant-name-position">
+                            <div class="restaurant-name">
+                                <h1>La palette du goût</h1>
+                            </div>
                             <div class="heart-position">
                                 <button class="heart"></button>
                             </div>
